# ws-tomo

src/TOMO/: CMakeLists.txt  (+1 more)
src/TOMO_final/: .setup_assistant  CMakeLists.txt  Transform_coordinate.py  package.xml
src/TOMO_final/config/: TOMO.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/TOMO_final/launch/: TOMO_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  control.launch  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  image_process.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  point_blister.launch  realtime_pickup_blister.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/TOMO_final/msg/: Num.msg  cam_to_object.msg  position_blisters.msg
src/TOMO_final/scripts/: Add_ground.py  Add_ring.py  Cartesian.py  GUI.ui  GUI_2.ui  Gui.py  Gui_2.py  Gui_2.py.  collision.py  pick_up_blisters.py  pose_goal.py  target_position.py  test_stability.py  trajectory.py
src/TOMO_final/software/: Run_Cartesian_path.py  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled4.ipynb  Untitled5.ipynb  control_tr.py  current_pos.py  h.py  main.py  sequence.ipynb
src/TOMO_final/software/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled2-checkpoint.ipynb  Untitled4-checkpoint.ipynb  sequence-checkpoint.ipynb
(+32 files in other folders)
